--- a/action-a/action.yml
+++ b/action-a/action.yml
@@ -7,6 +7,10 @@ inputs:
     description: "Who to greet"
     required: true
     default: "World"
+  CURRENT_BRANCH:
+    description: "current branch for action"
+    required: true
+    default: "main"
 
 runs:
   using: "docker"
