--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,11 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
+
       - name: Extract branch name
-        shell: bash
+        uses: actions/checkout@v1
         run: echo running on branche ${GITHUB_REF##*/}
-        id: extract_branch
+
       - name: Run Docker
       - uses: actions/checkout@v1
       - uses: ./action-a
