--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,10 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
-
       - name: Extract branch name
-        run: echo running on branche ${GITHUB_REF##*/}
+      - run: echo running on branche ${GITHUB_REF##*/}
 
-      - name: Run Docker
+      - name: Build
       - uses: actions/checkout@v1
       - uses: ./action-a
         with:
