extracting branch name on action step

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,12 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
-      - name: Extract branch name
-      - run: echo running on branche ${GITHUB_REF##*/}
+      -
+        name: Extract branch name
+        run: echo running on branche ${GITHUB_REF##*/}
 
-      - name: Build
-      - uses: actions/checkout@v1
-      - uses: ./action-a
+      -
+        name: Build
+        uses: ./action-a
         with:
           MY_NAME: "Eduardo"
