--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,8 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
+
       -
         name: Extract branch name
         run: echo running on branche ${GITHUB_REF##*/}
